Added scipt list refresh, editor path config & small UI fixes

--- a/Kubmill/appsettings.json
+++ b/Kubmill/appsettings.json
@@ -1,9 +1,10 @@
 {
   "Config": {
-    "KubeConfigPath": "kube.config",
+    "KubeConfigPath": null,
     "ShowSystemNamespaces": false
   },
   "General": {
-    "Theme": "Dark"
+    "Theme": "Dark",
+    "Editor": "C:\\Program Files\\Notepad++\\Notepad++.exe"
   }
 }
